--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><meta content="0; url='https://github.com/persimmon-io'"http-equiv=Refresh><title>Persimmon</title>
+<!DOCTYPE html><html><head><meta http-equiv="Refresh" content="0; url='https://github.com/persimmon-io'"><title>Persimmon</title></head><body></body></html>
